Add the content of the customizer template

--- a/src/app/components/common/customizer/customizer.component.html
+++ b/src/app/components/common/customizer/customizer.component.html
@@ -1,1 +1,43 @@
-<p>customizer works!</p>
+<div id="app-customizer">
+    <div class="handle" *ngIf="!isCustomizerOpen">
+      <button 
+      mat-fab
+      color="warn" 
+      (click)="isCustomizerOpen = true">
+        <mat-icon>settings</mat-icon>
+      </button>
+    </div>
+    <mat-card class="p-0" *ngIf="isCustomizerOpen">
+      <mat-card-title class="mat-bg-warn">
+        <div class="card-title-text">
+          <span>Settings</span>
+          <span fxFlex></span>
+          <button 
+          class="card-control" 
+          mat-icon-button
+          (click)="isCustomizerOpen = false">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
+      </mat-card-title>
+      <mat-card-content>
+        <div class="pb-1">
+          <h5 class="m-0 pb-1">Choose a Navigation Style</h5>
+          <mat-radio-group fxLayout="column" [(ngModel)]="selectedMenu" (change)="changeSidenav($event)">
+            <mat-radio-button 
+            *ngFor="let type of sidenavTypes" 
+            [value]="type.value">
+              {{type.name}}
+            </mat-radio-button>
+          </mat-radio-group>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="pt-1 pb-1">
+          <mat-checkbox [(ngModel)]="isBreadcrumbEnabled" (change)="toggleBreadcrumb($event)">Use breadcrumb</mat-checkbox>
+        </div>
+        <div class="pb-1">
+          <mat-checkbox [(ngModel)]="isTopbarFixed" (change)="toggleTopbarFixed($event)">Fixed Topbar</mat-checkbox>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
